# sparkle

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: sparkle.yaml
sparkle/bench/: bench.py  lbfgsb.py  pbo.py  pex.py
sparkle/bench/lbfgsb/: all.json  iter_ms.json  lbfgsb.json  m_tol.json
sparkle/bench/pbo/: pbo.json
sparkle/bench/pex/: pex.json
sparkle/doc/: bib.bib  doc.tex
sparkle/doc/layout/: settings.tex
sparkle/doc/parts/: faq.tex  installation.tex
sparkle/env/: base_env.py
sparkle/env/branin/: branin.py  ego.json  ego_lipnet.json  kriging.json  lipnet.json  pbo.json  sa.json  sepnet.json
sparkle/env/constraint/: cmaes.json  constraint.py
sparkle/env/emstack/: emstack.py  pbo.json
sparkle/env/gray_scott/: ego.json  gray_scott.py
sparkle/env/griewank/: griewank.py  kriging.json  pbo.json
sparkle/env/heat_source/: cmaes.json  cmaes_parallel.json  heat_source.py  heat_source_parallel.py
sparkle/env/lorenz/: cmaes.json  ego.json  lorenz.py  pbo.json  run.py
sparkle/env/mixed/: mixed.py  pbo.json
sparkle/env/multi1d/: cmaes.json  ego.json  ego_qei.json  kriging.json  lipnet.json  multi1d.py
sparkle/env/n_body/: cmaes.json  n_body.py
sparkle/env/packing/: cmaes.json  ego.json  packing.json  packing.py  packing_cmaes.json  packing_pso.json  pbo.json
sparkle/env/parabola/: cem.json  cmaes.json  cmaes_parallel.json  cmaes_separable.json  ego.json  kriging.json  lipnet.json  nelder_mead.json  parabola.json  parabola.py  parabola_cem.json  pbo.json  (+4 more)
sparkle/tst/: runner.py  tst.py
(+177 files in other folders)
